tests/baselines/reference/separateCompilationPlainFile-CommonJS.errors.txt
tests/cases/compiler/separateCompilationPlainFile-CommonJS.ts(2,1): error TS1208: Cannot compile namespaces when the '--separateCompilation' flag is provided.


==== tests/cases/compiler/separateCompilationPlainFile-CommonJS.ts (1 errors) ====
    
    declare function run(a: number): void;
    ~~~~~~~
!!! error TS1208: Cannot compile namespaces when the '--separateCompilation' flag is provided.
    run(1);
    